--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "traceur-loader",
   "author": "Juan Placencia",
   "description": "Traceur loader for Webpack",
-  "version": "0.1.1",
+  "version": "0.2.3",
   "license": "MIT",
   "homepage": "https://github.com/jupl/traceur-loader",
   "repository": {
@@ -12,8 +12,10 @@
   "main": "index.js",
   "dependencies": {
     "extend-object": "^1.0.0",
-    "loader-utils": "^0.2.3",
-    "traceur": "0.0.49"
+    "loader-utils": "^0.2.3"
+  },
+  "peerDependencies": {
+    "traceur": "*"
   },
   "keywords": [
     "webpack",
