--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "extend-object": "^1.0.0",
     "loader-utils": "^0.2.3",
+    "multi-stage-sourcemap": "^0.2.1",
     "traceur": "0.0.72"
   },
   "keywords": [
