Change traceur to be a peer dependency.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "main": "index.js",
   "dependencies": {
     "extend-object": "^1.0.0",
-    "loader-utils": "^0.2.3",
-    "traceur": "0.0.72"
+    "loader-utils": "^0.2.3"
+  },
+  "peerDependencies": {
+    "traceur": "0.0.x"
   },
   "keywords": [
     "webpack",
